Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,16 +10,16 @@ pool:
   vmImage: windows-latest
 
 steps:
-
-- pwsh: |
-
-  $psd1 = get-content experfwiz.psd1
-  ($psd1 | select-string 'moduleversion*') -match '([0-9].[0-9].[0-9])'
-  $Version = $Matches.1
-  Write-Host $Version
-
-displayName: "Getting Script Version information"
-
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your PowerShell commands here.
+      
+        $psd1 = get-content experfwiz.psd1
+        ($psd1 | select-string 'moduleversion*') -match '([0-9].[0-9].[0-9])'
+        $Version = $Matches.1
+        Write-Host $Version
 
 - task: ArchiveFiles@2
   inputs:
