--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,8 @@ steps:
         ($psd1 | select-string 'moduleversion*') -match '([0-9].[0-9].[0-9])'
         $Version = $Matches.1
         Write-Host $Version
-        git tag
+        if (git tag -contains $version) { write-host "Found"}
+        else { write-host "Not found"}
 
 - task: ArchiveFiles@2
   inputs:
