--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,7 @@
 trigger:
 - master
 
+
 pool:
   vmImage: windows-latest
 
@@ -22,6 +23,11 @@ steps:
         Write-Host $Version
         if ((git tag) -contains $version) { write-host "Found"}
         else { write-host "Not found"}
+
+- task: DeleteFiles@1
+  inputs:
+    SourceFolder: '''$(Build.SourcesDirectory)'''
+    Contents: '*.ymal'
 
 - task: ArchiveFiles@2
   inputs:
