--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,10 @@ steps:
 - task: DeleteFiles@1
   inputs:
     SourceFolder: '''$(Build.SourcesDirectory)'''
-    Contents: '*.ymal'
+    Contents: |
+      '*.yml'
+      '.git'
+      '.gitignore'
 
 - task: ArchiveFiles@2
   inputs:
