Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
           write-host "New Version"
           git tag $version
           git tag
-          gut push
+          git push
           }
 
 - task: DeleteFiles@1
