--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
           write-host "New Version"
           git tag $version
           git tag
-          git push
+          git push origin
           }
 
 - task: DeleteFiles@1
