Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
           write-host "New Version"
           git tag $version
           git tag
-          git push origin
+          git push origin HEAD:master
       }
 
 - task: DeleteFiles@1
