--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,10 @@ steps:
   clean: true
   persistCredentials: true
 
+steps:
+- script: echo $(psgallery) # uses macro syntax
+- script: echo $(psgallery) 
+
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
