--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
         if ((git tag) -contains $version) { 
           write-host "Found Existing Version"
           Get-ChildItem $(Build.SourcesDirectory)
-          Publish-Module -path $(Build.SourcesDirectory) -nugetapikey $(PSGallery) -name 'ExPerfWiz'
+          Publish-Module -path "$(Build.SourcesDirectory)/experfwiz.psd1" -nugetapikey $(PSGallery)
         }
         else { 
           write-host "New Version"
